--- a/mysql-deployment.yaml
+++ b/mysql-deployment.yaml
@@ -11,15 +11,18 @@ spec:
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
-metadata: mysql-pv-claim
+metadata: 
+  name: mysql-pv-claim
+  annotations:
+    volume.beta.kubernetes.io/storage-class: ibmc-file-bronze
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-    storage: 20Gi
+      storage: 20Gi
 ---
-apiVersion: apps/v1beta2 # for versions before 1.9.0 use apps/v1beta2
+apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
   name: mysql
@@ -40,7 +43,7 @@ spec:
         env:
           # Use secret in real usage
         - name: MYSQL_ROOT_PASSWORD
-          value: super_secret_squirrel
+          value: wibble
         ports:
         - containerPort: 3306
           name: mysql
